@@ -205,6 +205,12 @@ extern
 #define __MINGW_PRINTF_FORMAT gnu_printf
 #define __MINGW_SCANF_FORMAT  gnu_scanf
 
+/* There seems to be a bug about builtins and static overrides of them
+   in g++.  So we need to do here some trickery.  */
+#ifdef __cplusplus
+extern "C++" {
+#endif
+
 __mingw_ovr
 __attribute__((__format__ (gnu_scanf, 2, 3))) __MINGW_ATTRIB_NONNULL(2)
 int sscanf(const char *__source, const char *__format, ...)
@@ -359,6 +365,10 @@ int vsnprintf (char *__stream, size_t __n, const char *__format, __builtin_va_li
 
 /* #endif */ /* __NO_ISOCEXT */
 
+#ifdef __cplusplus
+}
+#endif
+
 #else /* !__USE_MINGW_ANSI_STDIO */
 
 #undef __MINGW_PRINTF_FORMAT
@@ -459,11 +469,7 @@ int vsnprintf (char *__stream, size_t __n, const char *__format, __builtin_va_li
 #ifndef _FILE_OFFSET_BITS_SET_FSEEKO
 #define _FILE_OFFSET_BITS_SET_FSEEKO
 #if (defined(_FILE_OFFSET_BITS) && (_FILE_OFFSET_BITS == 64))
-/*#define fseeko(__stream,__offset,__whence) fseeko64(__stream,__offset,__whence)*/
 #define fseeko fseeko64
-#else
-/* fseeko32 redirects to fseeko64, though fseeko (32bit off_t) symbol is provided */
-/* #define fseeko(__stream,__offset,__whence) fseeko64(__stream,__offset,__whence) */
 #endif /* (defined(_FILE_OFFSET_BITS) && (_FILE_OFFSET_BITS == 64)) */
 #endif /* _FILE_OFFSET_BITS_SET_FSEEKO */
 
